# serial-monad

./: .gitignore  CHANGELOG.md  LICENSE  serial-monad.cabal
src/Serial/: Monad.hs
src/Serial/Monad/: Log.hs
